--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,14 @@
 			<artifactId>pi4j-core</artifactId>
 			<version>0.0.5</version>
 		</dependency>
+		
+		<!-- SQLite -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.7.15-M1</version>
+		</dependency>
+		
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
