added plain use of the pi4j: 	- Service to control a pin (on, off) 	- Service to send message to arduino via serial.

--- a/pom.xml
+++ b/pom.xml
@@ -168,13 +168,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <compilerArgument>-Xlint:all</compilerArgument>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
                 </configuration>
             </plugin>
             <plugin>
@@ -185,6 +191,28 @@
                     <mainClass>org.test.int1.Main</mainClass>
                 </configuration>
             </plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<server>${tomcat-server}</server>
+          			<url>${tomcat-url}</url>
+        		</configuration>
+			</plugin>
         </plugins>
     </build>
+    
+	<profiles>
+		<profile>
+			<id>pi-tomcat</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<tomcat-server>tomcat7-rpi</tomcat-server>
+				<tomcat-url>http://192.168.1.47:8080/manager/text</tomcat-url>
+			</properties>
+		</profile>
+	</profiles>
 </project>
